# complit_agent_kpfu

./: .env.example  .gitignore  README.md  docker-compose.yml  train_bert_classifier.py
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/data/models/: README.md  logistic_classifier_new_dataset.pkl  tokenizer_new_dataset.pkl
backend/data/prompts/: prompt.txt
backend/src/: main.py
backend/src/agents/: __init__.py  abbreviation_convert.py  deep_ticket_analyzer.py  question_generator.py  system_control.py  ticket_analyzer.py
backend/src/api/: __init__.py
backend/src/api/api_v1/: __init__.py  tickets.py  websocket.py
backend/src/core/: __init__.py  config.py
backend/src/core/clients/: __init__.py  gigachat_client.py  kfu.py
backend/src/core/enums/: __init__.py  ticket.py  work_type.py
backend/src/core/models/: __init__.py  work_type.py
backend/src/core/schemas/: __init__.py  analysis.py  kfu.py  ticket.py  work_type.py
backend/src/dao/: __init__.py  work_type.py
backend/src/exceptions/: __init__.py
backend/src/services/: __init__.py  ticket_analyzer.py
backend/src/utils/: model_downloader.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: AgentResultsPanel.tsx  AgentVisualization.tsx  ResultsPanel.tsx  TicketForm.tsx
frontend/lib/: api.ts
frontend/types/: api.ts
